# atomic_exec

./: .gitignore  CMakeLists.txt  atomic_exec.cpp  envsetup.sh  main.cpp  tdb_envsetup.sh
bmodel_atomic_gen/: conv2d.py  convert.sh  gdb_runner.sh  gdb_tdb.sh  gen_cmd.py  run.sh  watch_data.ipynb
firmware_core/: CMakeLists.txt  cmodel.cmake  pcie.cmake  soc.cmake
firmware_core/include/: nodechip_anyatomic.h  sg_api_struct.h  tpu_defs.h  tpu_kernel.h
firmware_core/src/: tpu_kernel_anyatomic.c  tpu_kernel_bcbinary.c
include/: support.h
python/: base_cmd.py  c.ipynb  cmodel.py  test_dma.py  test_example.py  test_mem.py  test_multiple.py  test_pcie_runner.py  test_single.py
